--- a/notebooks/visualization_yolov8.ipynb
+++ b/notebooks/visualization_yolov8.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ca90d8ef-0164-427f-a9f2-f389cfc2790f",
    "metadata": {},
    "outputs": [
@@ -95,8 +95,8 @@
       "🧩 Processed 100 frames...\n",
       "🧩 Processed 150 frames...\n",
       "🧩 Processed 200 frames...\n",
-      "✅ Visualization complete — saved to data/parking_visual.mp4\n",
-      "🖼️ Processed 206 frames in 51s\n",
+      "✅ Visualization complete — saved to output/parking_visual.mp4\n",
+      "🖼️ Processed 206 frames in 32s\n",
       "📊 Final Occupancy Rate: 0.0% (0/9 occupied)\n"
      ]
     }
@@ -298,11 +298,18 @@
     "model_path = \"models/yolov8n.pt\"\n",
     "region_json = \"data/parking_zones.json\"\n",
     "video_path = \"data/sample_video.mp4\"\n",
-    "output_path = \"data/parking_visual.mp4\"  # ✅ save in data/\n",
-    "\n",
+    "output_path = \"output/parking_visual.mp4\"  # ✅ save in ouput/\n",
     "visualizer = ParkingVisualizer(model_path, region_json, video_path, output_path)\n",
     "visualizer.run(show_live=False)  # ✅ Set to True only if your environment supports OpenCV windows"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f5f632-29b9-4ee2-ab76-72dbcaefec6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
