--- a/notebooks/visualization_yolov8.ipynb
+++ b/notebooks/visualization_yolov8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ca879362-690b-4846-bca4-28a7c4a0bfb1",
    "metadata": {
     "advisor": {
@@ -18,69 +18,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Parking data saved to data/parking_zones.json\n"
+      "✅ Parking zone configuration saved to ../data/parking_zones.json\n"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
     "import json\n",
     "import os\n",
     "\n",
-    "# Paths\n",
-    "image_path = \"data/x.png\"\n",
-    "output_dir = \"data\"\n",
+    "# =============================================================================\n",
+    "# STEP 1: Define Parking Zones (Manual Annotation Based on Aerial Image)\n",
+    "# =============================================================================\n",
+    "\n",
+    "output_dir = \"../data\"\n",
     "output_json = os.path.join(output_dir, \"parking_zones.json\")\n",
     "\n",
-    "# Create data directory if not exists\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Load image\n",
-    "image = cv2.imread(image_path)\n",
-    "output = image.copy()\n",
+    "# Parking zone definitions based on annotated aerial photo\n",
+    "# Red = occupied, Green = free\n",
+    "parking_zones = [\n",
+    "    {\n",
+    "        \"zone_id\": \"spot_1\",\n",
+    "        \"status\": \"free\",\n",
+    "        \"points\": [[930, 120], [970, 130], [960, 200], [920, 190]]\n",
+    "    },\n",
+    "    {\n",
+    "        \"zone_id\": \"spot_2\",\n",
+    "        \"status\": \"free\",\n",
+    "        \"points\": [[970, 130], [1010, 140], [1000, 210], [960, 200]]\n",
+    "    },\n",
+    "    {\n",
+    "        \"zone_id\": \"spot_3\",\n",
+    "        \"status\": \"free\",\n",
+    "        \"points\": [[1010, 140], [1050, 150], [1040, 220], [1000, 210]]\n",
+    "    },\n",
+    "    {\n",
+    "        \"zone_id\": \"spot_4\",\n",
+    "        \"status\": \"free\",\n",
+    "        \"points\": [[1050, 150], [1090, 160], [1080, 230], [1040, 220]]\n",
+    "    }\n",
+    "]\n",
     "\n",
-    "# Convert to grayscale\n",
-    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "# Blur and edge detection\n",
-    "blur = cv2.GaussianBlur(gray, (5,5), 0)\n",
-    "edges = cv2.Canny(blur, 50, 150)\n",
-    "\n",
-    "# Find contours (potential parking slots)\n",
-    "contours, _ = cv2.findContours(edges, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "\n",
-    "parking_zones = []\n",
-    "zone_id = 1\n",
-    "\n",
-    "for cnt in contours:\n",
-    "    x, y, w, h = cv2.boundingRect(cnt)\n",
-    "\n",
-    "    # Filter small or large areas\n",
-    "    if 40 < w < 150 and 80 < h < 200:\n",
-    "        roi = gray[y:y+h, x:x+w]\n",
-    "        mean_val = np.mean(roi)\n",
-    "\n",
-    "        # Assume lighter areas mean free space\n",
-    "        status = \"free\" if mean_val > 100 else \"occupied\"\n",
-    "\n",
-    "        parking_zones.append({\n",
-    "            \"zone_id\": f\"A{zone_id}\",\n",
-    "            \"coordinates\": {\"x1\": int(x), \"y1\": int(y), \"x2\": int(x+w), \"y2\": int(y+h)},\n",
-    "            \"status\": status\n",
-    "        })\n",
-    "        zone_id += 1\n",
-    "\n",
-    "# Save JSON to data/ folder\n",
+    "# Save to JSON\n",
     "with open(output_json, \"w\") as f:\n",
-    "    json.dump({\"parking_zones\": parking_zones}, f, indent=2)\n",
+    "    json.dump(parking_zones, f, indent=2)\n",
     "\n",
-    "print(f\"✅ Parking data saved to {output_json}\")"
+    "print(f\"✅ Parking zone configuration saved to {output_json}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ca90d8ef-0164-427f-a9f2-f389cfc2790f",
    "metadata": {},
    "outputs": [
@@ -88,27 +77,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "🎥 STEP 4: VISUAL AI DEMO – YOLOv8 PARKING MANAGEMENT VISUALIZATION\n",
       "🚗 Processing video frames for parking visualization...\n",
-      "🧩 Processed 50 frames...\n",
-      "🧩 Processed 100 frames...\n",
-      "🧩 Processed 150 frames...\n",
-      "🧩 Processed 200 frames...\n",
-      "✅ Visualization complete — saved to output/parking_visual.mp4\n",
-      "🖼️ Processed 206 frames in 32s\n",
-      "📊 Final Occupancy Rate: 0.0% (0/9 occupied)\n"
+      "✅ Saved to ../output/parking_visual.mp4\n",
+      "📊 Final Occupancy Rate: 0.0% (0/4)\n",
+      "🧾 Summary JSON saved to ../output/final_parking_status.json\n"
      ]
     }
    ],
    "source": [
     "# =============================================================================\n",
-    "# STEP 4: VISUAL AI DEMO – YOLOv8 PARKING MANAGEMENT VISUALIZATION (FIXED)\n",
+    "# STEP 4 FULL FIXED: YOLOv8 PARKING MANAGEMENT VISUALIZATION\n",
     "# =============================================================================\n",
-    "\n",
-    "# !pip install ultralytics opencv-python numpy\n",
-    "\n",
-    "print(\"\\n🎥 STEP 4: VISUAL AI DEMO – YOLOv8 PARKING MANAGEMENT VISUALIZATION\")\n",
     "\n",
     "import cv2\n",
     "import json\n",
@@ -119,31 +98,40 @@
     "\n",
     "\n",
     "class ParkingVisualizer:\n",
-    "    def __init__(self, model_path, region_json, video_path, output_path):\n",
+    "    def __init__(self, model_path, region_json, video_path, output_path, summary_json=None):\n",
     "        \"\"\"\n",
     "        YOLOv8-based Parking Visualization System\n",
     "        \"\"\"\n",
     "        self.model = YOLO(model_path)\n",
     "        self.video_path = video_path\n",
     "        self.output_path = output_path\n",
+    "        self.summary_json = summary_json\n",
     "\n",
+    "        # Load regions from JSON\n",
     "        with open(region_json, \"r\") as f:\n",
     "            data = json.load(f)\n",
     "\n",
-    "        # Accept both \"parking_zones\" key or direct list\n",
-    "        self.regions = data[\"parking_zones\"] if isinstance(data, dict) and \"parking_zones\" in data else data\n",
+    "        # Accept both dict and list JSON formats\n",
+    "        if isinstance(data, dict) and \"parking_zones\" in data:\n",
+    "            self.regions = data[\"parking_zones\"]\n",
+    "        elif isinstance(data, list):\n",
+    "            self.regions = data\n",
+    "        else:\n",
+    "            raise ValueError(\"❌ Invalid JSON structure. Expected a list or dict with 'parking_zones' key.\")\n",
     "\n",
+    "        # Colors for each state\n",
     "        self.colors = {\n",
     "            \"occupied\": (0, 0, 255),  # Red\n",
-    "            \"available\": (0, 255, 0),  # Green\n",
+    "            \"free\": (0, 255, 0),      # Green\n",
+    "            \"available\": (0, 255, 0)\n",
     "        }\n",
     "\n",
     "    def is_inside_region(self, point, polygon):\n",
-    "        \"\"\"Check if a detected object's center point lies inside a polygon region.\"\"\"\n",
+    "        \"\"\"Check if an object's center point lies inside a polygon region.\"\"\"\n",
     "        return cv2.pointPolygonTest(np.array(polygon, np.int32), point, False) >= 0\n",
     "\n",
     "    def run(self, show_live=False):\n",
-    "        \"\"\"Run visualization process.\"\"\"\n",
+    "        \"\"\"Run visualization and save annotated video + summary JSON.\"\"\"\n",
     "        cap = cv2.VideoCapture(self.video_path)\n",
     "        if not cap.isOpened():\n",
     "            print(\"❌ Error: Unable to open video file.\")\n",
@@ -174,94 +162,42 @@
     "            detections = self.model(frame, verbose=False)\n",
     "            boxes = detections[0].boxes.xyxy.cpu().numpy() if detections and detections[0].boxes else []\n",
     "\n",
-    "            region_status = {str(i): \"available\" for i in range(len(self.regions))}\n",
+    "            region_status = {r.get(\"zone_id\", str(i)): \"free\" for i, r in enumerate(self.regions)}\n",
     "\n",
+    "            # --- Check detections ---\n",
     "            for box in boxes:\n",
     "                x1, y1, x2, y2 = map(int, box[:4])\n",
     "                cx, cy = int((x1 + x2) / 2), int((y1 + y2) / 2)\n",
     "\n",
     "                for i, region in enumerate(self.regions):\n",
-    "                    # Handle both \"points\" and \"coordinates\" formats\n",
-    "                    if \"points\" in region:\n",
-    "                        polygon = region[\"points\"]\n",
-    "                    elif \"coordinates\" in region:\n",
-    "                        c = region[\"coordinates\"]\n",
-    "                        polygon = [\n",
-    "                            [c[\"x1\"], c[\"y1\"]],\n",
-    "                            [c[\"x2\"], c[\"y1\"]],\n",
-    "                            [c[\"x2\"], c[\"y2\"]],\n",
-    "                            [c[\"x1\"], c[\"y2\"]],\n",
-    "                        ]\n",
-    "                    else:\n",
-    "                        continue\n",
+    "                    polygon = region.get(\"points\") or []\n",
+    "                    if polygon and self.is_inside_region((cx, cy), polygon):\n",
+    "                        region_status[region.get(\"zone_id\", str(i))] = \"occupied\"\n",
     "\n",
-    "                    if self.is_inside_region((cx, cy), polygon):\n",
-    "                        region_status[str(i)] = \"occupied\"\n",
+    "            # --- Draw polygons ---\n",
+    "            for i, region in enumerate(self.regions):\n",
+    "                polygon = np.array(region.get(\"points\", []), np.int32)\n",
+    "                zone_id = region.get(\"zone_id\", f\"spot_{i+1}\")\n",
+    "                status = region_status[zone_id]\n",
+    "                color = self.colors.get(status, (255, 255, 255))\n",
+    "\n",
+    "                cv2.polylines(frame, [polygon], True, color, 2)\n",
+    "                cv2.putText(frame, f\"{zone_id}: {status.upper()}\",\n",
+    "                            (polygon[0][0], polygon[0][1] - 10),\n",
+    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.6, color, 2)\n",
     "\n",
     "            occupied = list(region_status.values()).count(\"occupied\")\n",
     "            available = total_spots - occupied\n",
-    "            occupancy_rate = (occupied / total_spots) * 100 if total_spots > 0 else 0\n",
+    "            occupancy_rate = (occupied / total_spots) * 100 if total_spots else 0\n",
     "\n",
-    "            # Draw all regions\n",
-    "            for i, region in enumerate(self.regions):\n",
-    "                if \"points\" in region:\n",
-    "                    pts = np.array(region[\"points\"], np.int32)\n",
-    "                elif \"coordinates\" in region:\n",
-    "                    c = region[\"coordinates\"]\n",
-    "                    pts = np.array(\n",
-    "                        [\n",
-    "                            [c[\"x1\"], c[\"y1\"]],\n",
-    "                            [c[\"x2\"], c[\"y1\"]],\n",
-    "                            [c[\"x2\"], c[\"y2\"]],\n",
-    "                            [c[\"x1\"], c[\"y2\"]],\n",
-    "                        ],\n",
-    "                        np.int32,\n",
-    "                    )\n",
-    "                else:\n",
-    "                    continue\n",
-    "\n",
-    "                status = region_status[str(i)]\n",
-    "                color = self.colors[status]\n",
-    "                cv2.polylines(frame, [pts], True, color, 2)\n",
-    "                cv2.putText(\n",
-    "                    frame,\n",
-    "                    status.upper(),\n",
-    "                    (pts[0][0], pts[0][1] - 10),\n",
-    "                    cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "                    0.6,\n",
-    "                    color,\n",
-    "                    2,\n",
-    "                )\n",
-    "\n",
-    "            # Draw info box\n",
-    "            cv2.rectangle(frame, (10, 10), (380, 80), (50, 50, 50), -1)\n",
-    "            cv2.putText(\n",
-    "                frame,\n",
-    "                f\"Total Spots: {total_spots}\",\n",
-    "                (20, 30),\n",
-    "                cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "                0.6,\n",
-    "                (255, 255, 255),\n",
-    "                2,\n",
-    "            )\n",
-    "            cv2.putText(\n",
-    "                frame,\n",
-    "                f\"Available: {available}  Occupied: {occupied}\",\n",
-    "                (20, 50),\n",
-    "                cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "                0.6,\n",
-    "                (0, 255, 255),\n",
-    "                2,\n",
-    "            )\n",
-    "            cv2.putText(\n",
-    "                frame,\n",
-    "                f\"Occupancy: {occupancy_rate:.1f}%\",\n",
-    "                (200, 70),\n",
-    "                cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "                0.6,\n",
-    "                (255, 255, 255),\n",
-    "                2,\n",
-    "            )\n",
+    "            # Info box\n",
+    "            cv2.rectangle(frame, (10, 10), (400, 90), (50, 50, 50), -1)\n",
+    "            cv2.putText(frame, f\"Total Spots: {total_spots}\", (20, 35),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.6, (255, 255, 255), 2)\n",
+    "            cv2.putText(frame, f\"Available: {available}  Occupied: {occupied}\", (20, 60),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 255), 2)\n",
+    "            cv2.putText(frame, f\"Occupancy: {occupancy_rate:.1f}%\", (220, 85),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.6, (255, 255, 255), 2)\n",
     "\n",
     "            out.write(frame)\n",
     "            frame_count += 1\n",
@@ -269,38 +205,47 @@
     "            if show_live:\n",
     "                try:\n",
     "                    cv2.imshow(\"Smart Parking Visualization\", frame)\n",
-    "                    if cv2.waitKey(1) & 0xFF == ord(\"q\"):\n",
+    "                    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "                        break\n",
     "                except cv2.error:\n",
     "                    print(\"⚠️ GUI not supported — skipping live display.\")\n",
     "                    show_live = False\n",
     "\n",
-    "            if frame_count % 50 == 0:\n",
-    "                print(f\"🧩 Processed {frame_count} frames...\")\n",
-    "\n",
+    "        # --- Cleanup ---\n",
     "        cap.release()\n",
     "        out.release()\n",
     "\n",
-    "        if show_live:\n",
-    "            try:\n",
+    "        # ✅ Safe for headless environments (no GUI crash)\n",
+    "        try:\n",
+    "            if show_live:\n",
     "                cv2.destroyAllWindows()\n",
-    "            except cv2.error:\n",
-    "                print(\"⚠️ GUI not supported — skipping window cleanup.\")\n",
+    "        except Exception:\n",
+    "            pass\n",
     "\n",
     "        duration = (datetime.now() - start_time).seconds\n",
-    "        print(f\"✅ Visualization complete — saved to {self.output_path}\")\n",
-    "        print(f\"🖼️ Processed {frame_count} frames in {duration}s\")\n",
-    "        print(f\"📊 Final Occupancy Rate: {occupancy_rate:.1f}% ({occupied}/{total_spots} occupied)\")\n",
+    "\n",
+    "        print(f\"✅ Saved to {self.output_path}\")\n",
+    "        print(f\"📊 Final Occupancy Rate: {occupancy_rate:.1f}% ({occupied}/{total_spots})\")\n",
+    "\n",
+    "        # Save JSON summary\n",
+    "        if self.summary_json:\n",
+    "            with open(self.summary_json, \"w\") as f:\n",
+    "                json.dump(region_status, f, indent=4)\n",
+    "            print(f\"🧾 Summary JSON saved to {self.summary_json}\")\n",
+    "\n",
+    "\n",
     "# =============================================================================\n",
     "# Example Usage\n",
     "# =============================================================================\n",
     "\n",
-    "model_path = \"models/yolov8n.pt\"\n",
-    "region_json = \"data/parking_zones.json\"\n",
-    "video_path = \"data/sample_video.mp4\"\n",
-    "output_path = \"output/parking_visual.mp4\"  # ✅ save in ouput/\n",
-    "visualizer = ParkingVisualizer(model_path, region_json, video_path, output_path)\n",
-    "visualizer.run(show_live=False)  # ✅ Set to True only if your environment supports OpenCV windows"
+    "model_path = \"../models/yolov8n.pt\"\n",
+    "region_json = \"../data/parking_zones.json\"\n",
+    "video_path = \"../data/sample_video.mp4\"\n",
+    "output_path = \"../output/parking_visual.mp4\"\n",
+    "summary_json = \"../output/final_parking_status.json\"\n",
+    "\n",
+    "visualizer = ParkingVisualizer(model_path, region_json, video_path, output_path, summary_json)\n",
+    "visualizer.run(show_live=False)\n"
    ]
   },
   {
